# dockcross

./: .gitignore
base_working_dir/: .gitignore  HOWTO.txt  entry_point.sh
base_working_dir/cmake_tools/: build.sh  config.sh  run.sh  settings.sh
base_working_dir/cmake_tools/examples/: CMakeLists.txt
custom_imgs/custom_linux-armv7-glibc_2_28/: Dockerfile  crosstool-ng.config
